--- a/app/assets/css/main.css
+++ b/app/assets/css/main.css
@@ -1,4 +1,5 @@
 @import "tailwindcss";
+@import "primeicons/primeicons.css";
 
 .page-title{
     @apply text-primary text-5xl mb-4
@@ -6,4 +7,5 @@
 
 @theme {
     --color-primary: #42B883;
+    --color
 }
